--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -72,7 +72,7 @@
         <a href="/mantener_reserva">Mantener Reserva</a> 
        </div>
        <div class="inicio-adm-opciones-botones4">
-       <a href="/mantener_servicios">Mantener Servicios Basicos</a> 
+       <a href="/mantener_servicio">Mantener Servicios Basicos</a> 
        </div>
        <div class="inicio-adm-opciones-botones3">
           <a href="/pagos_adm">Pagos</a> 
