--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
@@ -55,34 +55,61 @@
 {% endif %}
 
    <br>  
-   <div class="row">
-     <div class="col-sm-6 col-sm-offset-3">
-       <div class="panel panel-default">
-         <div class="panel-heading">
-           <h3 class="panel-title">
-               Registro Reserva
-             </h3>
-         </div>
-         <div class="panel-body">
-           <form method="POST" accept-charset="UTF-8" role="form" enctype="multipart/form-data">
+   <div class="contacto">
+    <div class="contacto-contenido">
+        <div class="titulo-contacto">
+            <h2>Agregar Servicio</h2>
+        </div>
+        <div class="formulario-contacto">
+            <h4>Formulario Servicio </h4>
+            <hr>
+            <form class="form-contac" method="POST"  enctype="multipart/form-data">
              <fieldset>
-              <label>Fecha de Ingreso</label><br>
-              {{ form.Fecha_Reserva_Inicio }}<hr><br>
-              <label>Fecha de Salida</label><br>
-              {{ form.Fecha_Reserva_Termino }}<hr><br>
-              <label>Departamento a Elegir</label><br>
-              {{ form.departamento }}<hr><br>
-              <label>Servicios Extras</label><br>
-              {{ form.servicioextra }}<hr><br>  
-              <label>Usuario</label><br>   
-              {{ form.user }}<hr><br>       
-                 {% csrf_token %}
-               <input class="btn btn-lg btn-primary btn-block" type="submit" value="Registrar">
+              <label>Descripcion del Servicio</label><br>
+              {{ form.descrip_servicio }}<hr><br>
+              <label>Direccion de Reunion</label><br>
+              {{ form.direccion_reunion }}<hr><br>
+              <label>Direccion de Destino</label><br>
+              {{ form.direccion_destino }}<hr><br>
+              <label>Fecha de encuentro</label><br>
+              {{ form.fecha_encuentro }}<hr><br>  
+              <label>Valor del servicio</label><br>   
+              {{ form.valor_servicio }}<hr><br>       
+              {% csrf_token %}
+              <input type="submit" class="submit" value="Añadir Servicio">
              </fieldset>
            </form>
-         </div>
-       </div>
-     </div>
-   </div>
+          </div>
+          <div class="escritura-contacto">
+            <h4>Administracion para {{ request.user }}, pueda gestionar los servicios de TurismoReal. </h4>
+            <hr>
+            <p>Mantener Tour</p>
+            <br>
+            <a href="/actualizarreserva"> Tour
+            <br>
+            <br>
+            <br>
+            <p>Mantener Transporte</p>
+            <br>
+            <a href="/actualizarreserva"> Transporte
+            <br>
+            <br>
+            <br>
+            <p>Mantener Chofer</p>
+            <br>
+            <a href="/actualizarreserva"> Chofer
+            <br>
+            <br>
+            <br>
+            <p>Mantener Vehiculo</p>
+            <br>
+            <a href="/actualizarreserva"> Vehiculo
+              <br>
+              <br>
+              <br>
+        </div>
+      </div>
+  </div>
+    </div>
 
 {% endblock %}
