--- a/Portafolio 2.0/portafolio/aplicacion/static/css/contacto.css
+++ b/Portafolio 2.0/portafolio/aplicacion/static/css/contacto.css
@@ -111,7 +111,7 @@ margin: 1%;
         font-size: 16px;
         border: none;
         color: #fff;
-        padding: 15px 0;
+        padding: 3%;
         cursor: pointer;
         transition: all .5s ease;
         margin: 1%;
