mantener serivicio xxxxx

--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
@@ -54,9 +54,9 @@
         </div>
     </div>
     
-{% else %}
-    <h1>No existe registro de Reservas<h1>
-{% endif %}
+    {% else %}
+    <h1 align='center';>No existe registro de Servicio<h1>
+    {% endif %}
 
    <br>  
    <div class="row">
