--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
@@ -51,7 +51,7 @@
     </div>
     
 {% else %}
-    <h1>No existe registro de Reservas<h1>
+    <h1 align='center';>No existe registro de Servicio<h1>
 {% endif %}
 
    <br>  
