--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
@@ -51,10 +51,9 @@
             </table>
         </div>
     </div>
-{% else %}
-    <h1>No existe registro de Clientes<h1>
-{% endif %}
-
+    {% else %}
+    <h1 align='center';>No existe registro de Servicio<h1>
+    {% endif %}
    <br>  
    <div class="row">
      <div class="col-sm-6 col-sm-offset-3">
