--- a/Portafolio 2.0/portafolio/aplicacion/templates/actualizarservicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/actualizarservicio.html
@@ -19,14 +19,28 @@
           <fieldset>
            <label>Descripcion del Servicio</label><br>
            {{ form.descrip_servicio }}<hr><br>
+
            <label>Direccion de Reunion</label><br>
            {{ form.direccion_reunion }}<hr><br>
+
            <label>Direccion de Destino</label><br>
            {{ form.direccion_destino }}<hr><br>
+
            <label>Fecha de encuentro</label><br>
            {{ form.fecha_encuentro }}<hr><br>  
+
+           <label>Fecha de termino del servicio</label><br>   
+           {{ form.fecha_termino_servicio }}<hr><br>
+
            <label>Valor del servicio</label><br>   
-           {{ form.valor_servicio }}<hr><br>       
+           {{ form.valor_servicio }}<hr><br>  
+
+           <label>Transporte</label><br>   
+           {{ form.transporte }}<hr><br>  
+
+           <label>Tour</label><br>   
+           {{ form.tour }}<hr><br>  
+
            {% csrf_token %}
            <input type="submit" class="submit" value="Añadir Servicio">
           </fieldset>
