--- a/Portafolio 2.0/portafolio/aplicacion/templates/actualizarservicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/actualizarservicio.html
@@ -10,7 +10,7 @@
 <div class="contacto">
  <div class="contacto-contenido">
      <div class="titulo-contacto">
-         <h2>Agregar Servicio</h2>
+         <h2>Modificacion Servicio</h2>
      </div>
      <div class="formulario-contacto">
          <h4>Formulario Servicio </h4>
@@ -42,7 +42,7 @@
            {{ form.tour }}<hr><br>  
 
            {% csrf_token %}
-           <input type="submit" class="submit" value="Añadir Servicio">
+           <input type="submit" class="submit" value="Modificar Servicio">
           </fieldset>
         </form>
        </div>
