--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
@@ -110,6 +110,7 @@
 
                 {% csrf_token %}
                 <br><br>
+                <a href="/inicio">Volver al Menu</a>
                 <input type="submit" class="submit" value="Añadir Departamento">
             </form> 
             
