--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
@@ -90,6 +90,7 @@
                  {% csrf_token %}
                  <input type="submit" class="form-submit" value="Reservar" onClick="verificarCasilla(this.form)">
                  <input type="reset" class="form-submit" value="Limpiar Formulario">
+                 <a href="/inicio">Volver al Menu</a>
                  </form>
              </div>
          </div>
