--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_vehiculo.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_vehiculo.html
@@ -98,6 +98,7 @@
               {% csrf_token %}
               <input type="submit" class="form-submit" value="Reservar" onClick="verificarCasilla(this.form)">
               <input type="reset" class="form-submit" value="Limpiar Formulario">
+              <a href="/mantener_servicio">Volver a Mantencion Servicio</a>
     </form>
  </div>
 </div>
