--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
@@ -52,7 +52,11 @@
         </div>
     </div>
     {% else %}
-    <h1 align='center';>No existe registro de Servicio<h1>
+    <div id="resultadolisto">
+      <br> <br> <br> 
+      <h2>No hay registros de Clientes, favor añadir</h2>
+      <br> <br> 
+      </div>    
     {% endif %}
    <br>  
    <div class="row">
@@ -128,6 +132,7 @@
                </div>
                  {% csrf_token %}
                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Registrar">
+               <a href="/inicio">Volver al Menu</a>
              </fieldset>
            </form>
          </div>
