actualizado perfil admin

--- a/Portafolio 2.0/portafolio/aplicacion/templates/actualizarservicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/actualizarservicio.html
@@ -35,8 +35,8 @@
            <label>Valor del servicio</label><br>   
            {{ form.valor_servicio }}<hr><br>  
 
-           <label>Transporte</label><br>   
-           {{ form.transporte }}<hr><br>  
+           <label>Conductor</label><br>   
+           {{ form.conductor }}<hr><br>  
 
            <label>Tour</label><br>   
            {{ form.tour }}<hr><br>  
