--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -84,7 +84,7 @@
           <a href="/generar_informe">Generar Informe</a> 
        </div>
         <div class="inicio-adm-opciones-botones8">
-           <a href="#">Ver mi Perfil</a> 
+           <a href="/perfiladministrador">Ver mi Perfil</a> 
         </div>
   </div>
 </div>
