--- a/Portafolio 2.0/portafolio/aplicacion/templates/perfiladministrador.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/perfiladministrador.html
@@ -41,6 +41,13 @@
         <h3>Telefono</h3>
         <p><a href="#">{{ user.cli_Telefono}}</a></p>
     </li>
+    <li>
+        <div class="botones-perfil">
+        <h3>Volver al Menu</h3>
+        <a href="/inicio">Volver al Menu</a>
+    </div>
+    </li>
+
 </div>
 </center>
 
