perfil administrador actualizado

--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -151,7 +151,7 @@
               <a  href="/inicio"> <strong> Menu Principal </strong> </a>
           </li>
           <li> 
-              <a  href=""> <strong> Mi Perfil </strong> </a>
+              <a  href="/perfiladministrador"> <strong> Mi Perfil </strong> </a>
           </li>
       </ul>
   </nav>
