--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_reserva.html
@@ -25,11 +25,13 @@
               <th>Fecha Inicio</th>
               <th>Fecha Termino</th>
               <th>Cliente</th>
+              <th>Cantidad dias</th>
               <th>Departamento</th>
               <th>Costo</th>
               <th>Servicio</th>
               <th>Modificar</th>
               <th>Cancelar</th>
+              <th>Detalle</th>
             </tr>
           </thead>
         </div>
@@ -39,13 +41,16 @@
             <td>{{ reserva.Fecha_Reserva_Inicio}}</td>
             <td>{{ reserva.Fecha_Reserva_Termino}}</td>
             <td>{{ reserva.user}}</td>
+            <td>{{ reserva.Cantidad_Dias}}</td>
             <td>{{ reserva.departamento}}</td>
             <td>{{ reserva.departamento.Valor_Diario}}</td>
-            <td>{{ reserva.servicioextra}}</td>}
-            <td><a href="/actualizarreserva/{{ reserva.id }}">Modificar
+            <td>{{ reserva.servicioextra}}</td>
+            <td><a href="/actualizarreserva/{{ reserva.id }}">Modificar</td>
             <td><a href="/deletereserva/{{ reserva.id }}">
                 Cancerlar
             </a></td>
+            <td><a href="/detailreserva/{{ reserva.id }}">Detalle</td>
+
         </tr>
           </tr>
         {% endfor %}
@@ -80,6 +85,8 @@
               {{ form.Fecha_Reserva_Termino }}<hr><br>
               <label>Departamento a Elegir</label><br>
               {{ form.departamento }}<hr><br>
+              <label>Cantidad de dias</label><br>
+              {{ form.Cantidad_Dias }}<hr><br>
               <label>Servicios Extras</label><br>
               {{ form.servicioextra }}<hr><br>  
               <label>Usuario</label><br>   
