--- a/Portafolio 2.0/portafolio/aplicacion/templates/reserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/reserva.html
@@ -75,6 +75,8 @@
            {{ form.Fecha_Reserva_Inicio }}<hr><br>
            <label>Fecha de Salida</label><br>
            {{ form.Fecha_Reserva_Termino }}<hr><br>
+           <label>Cantidad de Dias</label><br>
+           {{ form.Cantidad_Dias }}<hr><br>
            <label>Departamento a Elegir</label><br>
            {{ form.departamento }}<hr><br>
            <label>Servicios Extras</label><br>
