--- a/Portafolio 2.0/portafolio/aplicacion/templates/detailreserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/detailreserva.html
@@ -20,6 +20,20 @@
     <p><span>Amoblado: </span>{{ reserva.departamento.Amoblado }}</p>
     <p><span>Comuna: </span>{{ reserva.departamento.comuna }}</p>
     <p><span>Direccion: </span>{{ reserva.departamento.Direccion_departamento }}</p>
+    <br><hr>
+    <br>
+    <br>
+    <br>
+    <a href="{% url 'cliente_app:reserva_all' reserva.id %} " target="_blank">Archivo PDF</a>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <a href="/inicio">Volver al Menu</a>
+    <br>
+    <br>
+    <br> 
 </div>
 
 
