--- a/Portafolio 2.0/portafolio/aplicacion/templates/Cliente.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/Cliente.html
@@ -36,8 +36,7 @@
         <td><a href="/cancelarreserva/{{ reservita.id }}">
             Cancerlar
         </a></td>
-        <td><a href="{% url 'cliente_app:reserva_all' reservita.id %} " target="_blank">Voucher</a>
-        </td>
+        <td><a href="{% url 'cliente_app:reserva_all' reservita.id %} " target="_blank">Voucher</a></td>
 
     </tr>
       </tr>
