--- a/Portafolio 2.0/portafolio/aplicacion/templates/actualizardepartamento.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/actualizardepartamento.html
@@ -15,7 +15,7 @@
           </h3>
       </div>
       <div class="panel-body">
-        <form method="POST" accept-charset="UTF-8" role="form">
+        <form method="POST"´ role="form" enctype="multipart/form-data">
             <fieldset>
             <div class="escritura">
                 <label>Nombre Departamento</label>
