añadiendo comuna y ciudad

--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
@@ -125,12 +125,12 @@
           <hr>
           <h4>Gestiones de los departamentos </h4>
           <br>
-          <p>Jonathan cabrera</p>
-          <i class="fa fa-phone fa-fw text-primary"></i> +569 4353 1445
+          <p>Crear Ciudad</p>
+          <a href="/ciudad">Ciudad</a>
           <br>
           <br>
-          <p>Ezequiel Riquelme</p>
-          <i class="fa fa-phone fa-fw text-primary"></i> +569 5776 2043
+          <p>Crear Comuna</p>
+          <a href="/comuna">Comuna</a>
           <br>
       </div>
     </div>
