--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
@@ -132,6 +132,10 @@
           <p>Crear Comuna</p>
           <a href="/comuna">Comuna</a>
           <br>
+          <br>
+          <p>Inventarios</p>
+          <a href="/inventario">Inventario</a>
+          <br>
       </div>
     </div>
 </div>
