--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_servicio.html
@@ -81,7 +81,7 @@
               <label>Fecha de encuentro</label><br>
               {{ form.fecha_encuentro }}<br><br><br>
 
-              <label>Fecha de encuentro</label><br>
+              <label>Fecha de termino</label><br>
               {{ form.fecha_termino_servicio }}<br><br><br>  
 
               <label>Valor del servicio</label><br>   
